Added textDirection 'anyRtl' to all TextViews
The default detection goes by the first character, and if that happens
to be a Latin word then it will format the paragraph as LTR, even if
the rest of the paragraph is actually RTL the first word is just an
exception.

Instead, anyRtl will format the paragraph as RTL if it contains ANY
RTL markers.

Fixes #176

--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -10,10 +10,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingEnd="@dimen/keyline_1"
     android:paddingStart="@dimen/keyline_1"
-    android:paddingTop="?actionBarSize">
+    android:paddingTop="?actionBarSize"
+    android:paddingEnd="@dimen/keyline_1"
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
 
     <TextView
@@ -22,6 +22,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="6dp"
+      android:textDirection="anyRtl"
       android:textIsSelectable="true"
       android:transitionName="title"
       tools:text="@tools:sample/cities" />
@@ -31,8 +32,9 @@
       style="@style/TextAppearance.Reader.Author"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="2dp"
       android:layout_marginTop="2dp"
+      android:layout_marginBottom="2dp"
+      android:textDirection="anyRtl"
       android:textIsSelectable="true"
       tools:text="CowboyProgrammer" />
 
@@ -41,8 +43,9 @@
       style="@style/TextAppearance.Reader.Author"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="8dp"
       android:layout_marginTop="2dp"
+      android:layout_marginBottom="8dp"
+      android:textDirection="anyRtl"
       android:textIsSelectable="true"
       tools:text="by Jonas, Sep 14 2015" />
 
@@ -53,6 +56,7 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:minHeight="300dp"
+      android:textDirection="anyRtl"
       android:textIsSelectable="true"
       tools:text="@tools:sample/lorem/random" />
   </LinearLayout>
