--- a/app/src/main/res/layout/activity_edit_feed.xml
+++ b/app/src/main/res/layout/activity_edit_feed.xml
@@ -4,10 +4,10 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
-  android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
-  android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
+  android:paddingRight="@dimen/activity_horizontal_margin"
+  android:paddingBottom="@dimen/activity_vertical_margin"
   tools:context="com.nononsenseapps.feeder.ui.EditFeedActivity">
 
   <ScrollView
@@ -33,8 +33,8 @@
           style="@style/TextAppearance.Title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="2dp"
           android:layout_marginTop="2dp"
+          android:layout_marginBottom="2dp"
           android:hint="@string/url"
           android:imeOptions="actionNext"
           android:inputType="textUri"
@@ -57,7 +57,8 @@
           android:hint="@string/title"
           android:imeOptions="actionNext"
           android:inputType="text|textAutoComplete|textAutoCorrect|textCapSentences"
-          android:singleLine="true" />
+          android:singleLine="true"
+          android:textDirection="anyRtl" />
       </com.nononsenseapps.feeder.views.FloatLabelLayout>
 
       <com.nononsenseapps.feeder.views.FloatLabelLayout
@@ -72,13 +73,14 @@
           style="@style/TextAppearance.Title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginBottom="2dp"
           android:layout_marginTop="2dp"
+          android:layout_marginBottom="2dp"
           android:completionThreshold="1"
           android:hint="@string/tag"
           android:imeOptions="actionDone"
           android:inputType="text|textAutoComplete|textAutoCorrect|textCapSentences"
-          android:singleLine="true" />
+          android:singleLine="true"
+          android:textDirection="anyRtl" />
       </com.nononsenseapps.feeder.views.FloatLabelLayout>
 
       <!--<View-->
@@ -95,8 +97,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:background="?android:attr/selectableItemBackground"
         android:text="@string/add_feed" />
 
@@ -119,6 +121,7 @@
       android:imeOptions="actionGo"
       android:inputType="text|textAutoComplete|textUri"
       android:singleLine="true"
+      android:textDirection="anyRtl"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
@@ -127,8 +130,8 @@
       android:id="@+id/results_listview"
       android:layout_width="match_parent"
       android:layout_height="0dp"
-      android:layout_marginBottom="8dp"
       android:layout_marginTop="8dp"
+      android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -142,8 +145,9 @@
       android:layout_gravity="center"
       android:layout_marginTop="16dp"
       android:gravity="center"
-      android:visibility="gone"
       android:text="@string/search_feed_empty_hint"
+      android:textDirection="anyRtl"
+      android:visibility="gone"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/search_view" />
