--- a/app/src/main/res/layout/empty_feed.xml
+++ b/app/src/main/res/layout/empty_feed.xml
@@ -1,70 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@android:id/empty"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@android:id/empty"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/empty_nothing_here"
-        style="@style/TextAppearance.EmptyView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:text="@string/empty_feed_top"
-        app:layout_constraintBottom_toTopOf="@+id/empty_open_feeds"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_goneMarginTop="8dp"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+  <TextView
+    android:id="@+id/empty_nothing_here"
+    style="@style/TextAppearance.EmptyView"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:gravity="center"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:text="@string/empty_feed_top"
+    android:textDirection="anyRtl"
+    app:layout_constraintBottom_toTopOf="@+id/empty_open_feeds"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.4"
+    app:layout_constraintVertical_chainStyle="packed"
+    app:layout_goneMarginTop="8dp"
+    tools:layout_constraintLeft_creator="1"
+    tools:layout_constraintRight_creator="1" />
 
-    <TextView
-        android:id="@+id/empty_open_feeds"
-        style="@style/TextAppearance.EmptyView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:background="?android:selectableItemBackground"
-        android:gravity="center"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:text="@string/empty_feed_open"
-        app:layout_constraintBottom_toTopOf="@+id/empty_add_feed"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/empty_nothing_here"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+  <TextView
+    android:id="@+id/empty_open_feeds"
+    style="@style/TextAppearance.EmptyView"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:background="?android:selectableItemBackground"
+    android:gravity="center"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:text="@string/empty_feed_open"
+    android:textDirection="anyRtl"
+    app:layout_constraintBottom_toTopOf="@+id/empty_add_feed"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/empty_nothing_here"
+    tools:layout_constraintLeft_creator="1"
+    tools:layout_constraintRight_creator="1" />
 
-    <TextView
-        android:id="@+id/empty_add_feed"
-        style="@style/TextAppearance.EmptyView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:background="?android:selectableItemBackground"
-        android:gravity="center"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:text="@string/empty_feed_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/empty_open_feeds"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+  <TextView
+    android:id="@+id/empty_add_feed"
+    style="@style/TextAppearance.EmptyView"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:background="?android:selectableItemBackground"
+    android:gravity="center"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:text="@string/empty_feed_add"
+    android:textDirection="anyRtl"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/empty_open_feeds"
+    tools:layout_constraintBottom_creator="1"
+    tools:layout_constraintLeft_creator="1"
+    tools:layout_constraintRight_creator="1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
