--- a/app/src/main/res/layout/view_feed.xml
+++ b/app/src/main/res/layout/view_feed.xml
@@ -33,15 +33,16 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:paddingStart="2dp"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:textColor="@color/secondary_text_color"
+    android:textDirection="anyRtl"
     android:textSize="@dimen/navdrawer_unreadcount_textsize"
-    tools:text="99"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="99" />
 
   <TextView
     android:id="@+id/feed_name"
@@ -53,8 +54,9 @@
     android:paddingEnd="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    tools:text="Feed name"
+    android:textDirection="anyRtl"
     app:layout_constraintEnd_toStartOf="@+id/feed_unreadcount"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="Feed name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
