--- a/app/src/main/res/layout/view_feed_child.xml
+++ b/app/src/main/res/layout/view_feed_child.xml
@@ -33,11 +33,12 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:paddingStart="2dp"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:textColor="@color/secondary_text_color"
+    android:textDirection="anyRtl"
     android:textSize="@dimen/navdrawer_unreadcount_textsize"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
@@ -52,6 +53,7 @@
     android:paddingEnd="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:textDirection="anyRtl"
     app:layout_constraintEnd_toStartOf="@+id/feed_unreadcount"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
