--- a/app/src/main/res/layout/view_feed_result.xml
+++ b/app/src/main/res/layout/view_feed_result.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  xmlns:tools="http://schemas.android.com/tools"
   android:background="?android:selectableItemBackground"
   android:minHeight="?android:attr/listPreferredItemHeightSmall"
   android:orientation="vertical"
-  android:paddingBottom="6dp"
-  android:paddingTop="6dp">
+  android:paddingTop="6dp"
+  android:paddingBottom="6dp">
 
   <TextView
     android:id="@+id/feed_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:paddingBottom="2dp"
     android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:textDirection="anyRtl"
     android:textSize="14sp"
-    tools:text="@tools:sample/cities"/>
+    tools:text="@tools:sample/cities" />
 
   <TextView
     android:id="@+id/feed_url"
@@ -28,24 +29,26 @@
     android:layout_height="wrap_content"
     android:ellipsize="middle"
     android:gravity="center_vertical"
-    android:paddingBottom="2dp"
     android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:textColor="@color/secondary_text_color"
+    android:textDirection="anyRtl"
     android:textSize="14sp"
-    tools:text="https://feed.url/rss.xml"/>
+    tools:text="https://feed.url/rss.xml" />
 
   <TextView
     android:id="@+id/feed_description"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:paddingBottom="2dp"
     android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:textColor="@color/secondary_text_color"
+    android:textDirection="anyRtl"
     android:textSize="14sp"
-    tools:text="@tools:sample/lorem/random"/>
+    tools:text="@tools:sample/lorem/random" />
 </LinearLayout>
