--- a/app/src/main/res/layout/view_feed_tag.xml
+++ b/app/src/main/res/layout/view_feed_tag.xml
@@ -24,8 +24,8 @@
   android:layout_width="match_parent"
   android:layout_height="?android:attr/listPreferredItemHeightSmall"
   android:background="?android:selectableItemBackground"
-  android:paddingBottom="2dip"
   android:paddingTop="2dip"
+  android:paddingBottom="2dip"
   tools:ignore="RtlSymmetry">
 
   <TextView
@@ -33,11 +33,12 @@
     android:layout_width="wrap_content"
     android:layout_height="?android:attr/listPreferredItemHeightSmall"
     android:gravity="center_vertical"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:paddingStart="2dp"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:textColor="@color/secondary_text_color"
+    android:textDirection="anyRtl"
     android:textSize="@dimen/navdrawer_unreadcount_textsize"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
@@ -55,12 +56,13 @@
     android:id="@+id/tag_name"
     android:layout_width="0dp"
     android:layout_height="?android:attr/listPreferredItemHeightSmall"
-    android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:gravity="center_vertical"
     android:paddingEnd="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:textDirection="anyRtl"
     app:layout_constraintEnd_toStartOf="@+id/tag_unreadcount"
     app:layout_constraintStart_toEndOf="@+id/tag_expander"
     app:layout_constraintTop_toTopOf="parent" />
