Fixed navigation drawer to render correctly in RTL

--- a/app/src/main/res/layout/view_feed.xml
+++ b/app/src/main/res/layout/view_feed.xml
@@ -38,7 +38,6 @@
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:textColor="@color/secondary_text_color"
-    android:textDirection="anyRtl"
     android:textSize="@dimen/navdrawer_unreadcount_textsize"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
@@ -54,7 +53,7 @@
     android:paddingEnd="2dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:textDirection="anyRtl"
+    android:textDirection="locale"
     app:layout_constraintEnd_toStartOf="@+id/feed_unreadcount"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
