--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,16 +1,17 @@
-<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/drawer_layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fitsSystemWindows="true"
-  tools:context=".ui.FeedActivity"
   tools:openDrawer="start">
 
-  <!-- As the main content view, the view below consumes the entire
-       space available using match_parent in both dimensions. -->
-  <include layout="@layout/include_activity_feed_main" />
+  <include
+    layout="@layout/app_bar_navigation"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
   <!-- Nav drawer -->
   <include layout="@layout/navdrawer_for_ab_overlay" />
 
