--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -1,17 +1,15 @@
-<com.nononsenseapps.feeder.views.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/scroll_view"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="com.nononsenseapps.feeder.ui.ReaderFragment">
 
-  <!-- Action bar is overlayed, so add some padding -->
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="@dimen/keyline_1"
-    android:paddingTop="?actionBarSize"
     android:paddingEnd="@dimen/keyline_1"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
@@ -62,4 +60,4 @@
   </LinearLayout>
 
 
-</com.nononsenseapps.feeder.views.ObservableScrollView>
+</androidx.core.widget.NestedScrollView>
