--- a/app/src/main/res/layout/navdrawer_for_ab_overlay.xml
+++ b/app/src/main/res/layout/navdrawer_for_ab_overlay.xml
@@ -20,6 +20,7 @@
   android:layout_width="@dimen/navdrawer_width"
   android:layout_height="match_parent"
   android:layout_gravity="start"
+  android:fitsSystemWindows="true"
   android:background="@color/navdrawer_background"
   android:clipToPadding="false"
   android:orientation="vertical"
