--- a/app/src/main/res/layout/activity_edit_feed.xml
+++ b/app/src/main/res/layout/activity_edit_feed.xml
@@ -3,6 +3,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@color/window_background"
   android:orientation="vertical"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
