--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -5,6 +5,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@color/window_background"
   tools:context="com.nononsenseapps.feeder.ui.FeedActivity">
 
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
