--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -3,6 +3,7 @@
   android:id="@+id/scroll_view"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@color/window_background"
   tools:context="com.nononsenseapps.feeder.ui.ReaderFragment">
 
   <LinearLayout
