--- a/app/src/main/res/layout/fragment_reader_tablet.xml
+++ b/app/src/main/res/layout/fragment_reader_tablet.xml
@@ -1,4 +1,4 @@
-<com.nononsenseapps.feeder.views.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/scroll_view"
   android:layout_width="match_parent"
@@ -6,14 +6,12 @@
   android:background="@color/window_background"
   tools:context="com.nononsenseapps.feeder.ui.ReaderFragment">
 
-  <!-- Action bar is overlayed, so add some padding -->
   <LinearLayout
     android:layout_width="@dimen/reader_tablet_width"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingStart="@dimen/keyline_1"
-    android:paddingTop="?actionBarSize"
     android:paddingEnd="@dimen/keyline_1"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
@@ -64,4 +62,4 @@
   </LinearLayout>
 
 
-</com.nononsenseapps.feeder.views.ObservableScrollView>
+</androidx.core.widget.NestedScrollView>
