Fixed crash when notification contained items to be marked as read
Fixes #204

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -35,6 +35,7 @@
       app:destination="@id/settingsFragment" />
     <argument
       android:name="items_to_mark_as_notified"
+      app:argType="long[]"
       app:nullable="true" />
     <deepLink
       android:id="@+id/deepLink"
