--- a/app/src/main/res/menu/webview.xml
+++ b/app/src/main/res/menu/webview.xml
@@ -1,39 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!--
-  ~ Copyright (c) 2015 Jonas Kalderstam.
-  ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-  ~ General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
-  -->
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.ReaderWebViewActivity">
-    <item
-        android:id="@+id/action_open_enclosure"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_play_circle_outline_white_24dp"
-        android:title="@string/open_enclosed_media" />
-    <item
-        android:id="@+id/action_open_in_browser"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_open_in_browser_white_24dp"
-        android:title="@string/open_link_in_browser" />
-    <item
-        android:id="@+id/action_share"
-        app:showAsAction="ifRoom"
-        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
-        android:title="@string/share" />
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  tools:context=".ui.ReaderWebViewActivity">
+  <item
+    android:id="@+id/action_toggle_javascript"
+    android:checkable="true"
+    android:checked="true"
+    android:orderInCategory="1"
+    android:title="@string/javascript"
+    app:showAsAction="never" />
+  <item
+    android:id="@+id/action_open_enclosure"
+    android:icon="@drawable/ic_play_circle_outline_white_24dp"
+    android:title="@string/open_enclosed_media"
+    app:showAsAction="ifRoom" />
+  <item
+    android:id="@+id/action_open_in_browser"
+    android:icon="@drawable/ic_open_in_browser_white_24dp"
+    android:title="@string/open_link_in_browser"
+    app:showAsAction="ifRoom" />
+  <item
+    android:id="@+id/action_share"
+    android:title="@string/share"
+    app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
+    app:showAsAction="ifRoom" />
 </menu>
